# code-quality-guidelines

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  structuring.md
.claude/: settings.json
.claude/commands/: code-quality-installation.md  code-quality.md  review-scripts.md
.claude/commands/cq/: comment-docstrings.md  comment-todo-format.md  naming-pep8.md  visual-complexity.md  visual-line-length.md  visual-nesting-depth.md
.claude/commands/scripts/: code_quality.py
.claude/skills/code-quality/: SKILL.md
docs/: todo.md
instructions/: structuring.md
instructions/code_quality_guidelines/: structuring.md
scripts/: format_markdown.py
